[package]
name = "jako_balazs_erosion"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
maths = {git = "https://github.com/hindlet/rust_maths.git", package = "rust_maths", version = "*"}


vulkano = {git = "https://github.com/vulkano-rs/vulkano", package = "vulkano", branch = "master"}
vulkano-shaders = {git = "https://github.com/vulkano-rs/vulkano", package = "vulkano-shaders", branch = "master"}
vulkano-util = {git = "https://github.com/vulkano-rs/vulkano", package = "vulkano-util", branch = "master"}



winit = "0.30"
